--- a/package.json
+++ b/package.json
@@ -33,6 +33,24 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
+    "@types/jasmine": "^2.8.6",
+    "@types/node": "^9.6.0",
+    "angular2-template-loader": "^0.6.2",
+    "html-loader": "^0.5.5",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine": "^3.1.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^3.0.0",
+    "null-loader": "^0.1.1",
+    "protractor": "^5.3.0",
+    "ts-loader": "^4.1.0",
+    "ts-node": "^5.0.1",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
